--- a/crud/templates/layout.html
+++ b/crud/templates/layout.html
@@ -4,8 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>FLASK CRUD 1.6</title>
-  <!-- <link rel="stylesheet" href="https://bootswatch.com/5/cosmo/bootstrap.min.css"> -->
-  <link rel="stylesheet" href="https://bootswatch.com/5/darkly/bootstrap.min.css">
+  <link id="themeStylesheet" rel="stylesheet" href="https://bootswatch.com/5/cosmo/bootstrap.min.css">
   {% with messages = get_flashed_messages() %} {% if messages %}
   {% for message in messages %}
   <div class="alert alert-success alert-dismissible fade show" role="alert">
@@ -18,17 +17,22 @@
     <div class="container-fluid">
       <a class="navbar-brand" href="#">CRUD</a>
       {% if session.get("user_id") %}
-      <div class="d-flex">
-        <div class="nav-item pe-3 pt-2">{{ session.get("user_id") }}</div>
+      <div class="d-flex align-items-center">
+        <div class="nav-item pe-3">{{ session.get("user_id") }}</div>
+        <div class="nav-item pe-3">
+          <select id="themeSelector" class="form-select">
+            <option value="light">Claro</option>
+            <option value="dark">Oscuro</option>
+          </select>
+        </div>
         <a href="{{url_for('logout')}}" class="btn btn-secondary my-2 my-sm-0" type="submit">Salir</a>
       </div>
       {% endif %}
     </div>
   </nav>
-
 </head>
 
-<body>
+<body class="{{ session.get('theme', 'light') }}">
   <div class="container pt-4">
     {% block body %}
     {% endblock %}
