cambio en layout

--- a/crud/templates/layout.html
+++ b/crud/templates/layout.html
@@ -32,7 +32,7 @@
   </nav>
 </head>
 
-<body class="{{ session.get('theme', 'light') }}">
+<body>
   <div class="container pt-4">
     {% block body %}
     {% endblock %}
